@@ -5,9 +5,9 @@ import io.smallrye.jwt.auth.principal.ParseException;
 import io.smallrye.jwt.build.Jwt;
 import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.inject.Inject;
+import org.mindrot.jbcrypt.BCrypt;
 
-import java.util.Arrays;
-import java.util.HashSet;
+import java.util.Set;
 
 @ApplicationScoped
 public class JWT_Util {
@@ -18,10 +18,11 @@ public class JWT_Util {
     public static String generateToken(String userId, String username, String role) {
         return Jwt.issuer("user-service")
                 .subject(userId)
-                .groups(new HashSet<>(Arrays.asList("USER")))
+                .groups(Set.of("USER"))
                 .claim("role", role)
                 .claim("username", username)
-                .expiresAt(System.currentTimeMillis() / 1000 + 3600)
+//                .expiresAt(System.currentTimeMillis() / 1000 + 3600)
+                .expiresAt(System.currentTimeMillis() / 1000 + 86400)
                 .sign();
     }
 
@@ -33,5 +34,13 @@ public class JWT_Util {
         } catch (ParseException e) {
             return false;
         }
+    }
+
+    public static String hashPassword(String plainPassword) {
+        return BCrypt.hashpw(plainPassword, BCrypt.gensalt());
+    }
+
+    public static boolean checkPassword(String plainPassword, String hashedPassword) {
+        return BCrypt.checkpw(plainPassword, hashedPassword);
     }
 }
